@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-10-27T02:16:35Z",
+  "timestamp" : "2022-10-27T08:30:33Z",
   "count_outdated" : 846,
   "uniques_outdated" : 444,
-  "count" : 877,
+  "count" : 876,
   "uniques" : 460,
   "clones" : [
     {
       "timestamp": "2022-10-13T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
