@@ -1,3 +1,11 @@
+2022-10-27T08:30:33Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3335775901 # 977
+* notice: last 14d: unq all: 3 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 444 846 / 460 877
+* notice: next accum: outdated-unq outdated-all / unq all: 444 846 / 460 876
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-10-13]
+
 2022-10-27T02:16:35Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3333995319 # 976
 * notice: last 14d: unq all: 3 31
